--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "@strapi/plugin-cloud": "5.0.1",
     "@strapi/plugin-users-permissions": "5.0.1",
     "@strapi/strapi": "5.0.1",
-    "mysql2": "3.9.4",
+    "mysql2": "^3.11.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "styled-components": "^6.0.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
